force-app/objects/Bid__c/Bid__c.object-meta.xml
<CustomObject>
    <label>Bid</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Nr</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bids</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>