force-app/objects/Bid__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>Comment__c + IF(Comment__c !=&quot;&quot;,&quot; - &quot;,&quot;&quot;) + SUBSTITUTE(Opportunity__r.Account.Name,&quot;\&quot;&quot;,&quot;&apos;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>