force-app/objects/Bid__c/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <formula>Opportunity__r.Account.Owner.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>