force-app/objects/Bid__c/fields/APPS_Owner__c.field-meta.xml
<CustomField>
    <fullName>APPS_Owner__c</fullName>
    <formula>Opportunity__r.Apps_Owner__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>APPS Owner</label>
    <type>Text</type>
</CustomField>