force-app/objects/Bid__c/fields/BC_Owner__c.field-meta.xml
<CustomField>
    <fullName>BC_Owner__c</fullName>
    <formula>Opportunity__r.BC_Owner__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BC Owner</label>
    <type>Text</type>
</CustomField>