force-app/objects/Bid__c/fields/BD_Owner__c.field-meta.xml
<CustomField>
    <fullName>BD_Owner__c</fullName>
    <formula>Opportunity__r.Owner.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BD Owner</label>
    <type>Text</type>
</CustomField>