force-app/objects/Bid__c/fields/BID_Portal_URL__c.field-meta.xml
<CustomField>
    <fullName>BID_Portal_URL__c</fullName>
    <formula>IF( LEN(BID_Number__c ) = 10, 
&quot;https://steria.sharepoint.com/sites/intra_sc_tilbud/&quot; + BID_Number__c, BID_Number__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BID Portal URL</label>
    <type>Text</type>
</CustomField>