force-app/objects/Bid__c/fields/Biometrics__c.field-meta.xml
<CustomField>
    <fullName>Biometrics__c</fullName>
    <formula>IF(INCLUDES( Opportunity__r.Business_Unit__c , &quot;Biometrics&quot;), true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Biometrics</label>
    <type>Checkbox</type>
</CustomField>