force-app/objects/Bid__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <label>Comment</label>
    <length>20</length>
    <type>Text</type>
</CustomField>