force-app/objects/Bid__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <formula>if(TEXT(Opportunity__r.Account.Country__c)=&apos;Denmark&apos;,&apos;Danmark&apos;,&apos;Norge&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country</label>
    <type>Text</type>
</CustomField>