force-app/objects/Bid__c/fields/IM__c.field-meta.xml
<CustomField>
    <fullName>IM__c</fullName>
    <formula>IF(INCLUDES( Opportunity__r.Business_Unit__c , &quot;DPS&quot;), true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IM</label>
    <type>Checkbox</type>
</CustomField>