force-app/objects/Bid__c/fields/IM_Owner__c.field-meta.xml
<CustomField>
    <fullName>IM_Owner__c</fullName>
    <formula>Opportunity__r.DPS_Owner__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IM Owner</label>
    <type>Text</type>
</CustomField>