force-app/objects/Bid__c/fields/New_Template__c.field-meta.xml
<CustomField>
    <fullName>New_Template__c</fullName>
    <formula>Opportunity__r.New_Template__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Template</label>
    <type>Checkbox</type>
</CustomField>