force-app/objects/Bid__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <formula>SUBSTITUTE(Opportunity__r.Name,&quot;\&quot;&quot;,&quot;&apos;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Name</label>
    <type>Text</type>
</CustomField>