force-app/objects/Bid__c/fields/Proposal_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Due_Date__c</fullName>
    <description>Previously this referred to to other fields in opportunity for calculation. These fields were removed but this field is still used in BID object</description>
    <formula>Opportunity__r.Proposal_Due_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proposal Due Date</label>
    <type>DateTime</type>
</CustomField>