force-app/objects/Bid__c/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <formula>TEXT(Opportunity__r.Account.Ownership)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sector</label>
    <type>Text</type>
</CustomField>