force-app/objects/Bid__c/fields/Send_Bid_to_Sharepoint__c.field-meta.xml
<CustomField>
    <fullName>Send_Bid_to_Sharepoint__c</fullName>
    <description>Joined field to separate two condititions for update flow</description>
    <formula>IF (AND(Is_Bid_changed__c ,  Is_created_in_Bid_portal__c ) , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send Bid to Sharepoint</label>
    <type>Checkbox</type>
</CustomField>