force-app/objects/Bid__c/fields/StageID__c.field-meta.xml
<CustomField>
    <fullName>StageID__c</fullName>
    <label>StageID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>