force-app/objects/Bid__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>CASE(TEXT(Opportunity__r.StageName),
&apos;1 - Possibility&apos;,&apos;Mulighet&apos;,
&apos;2 - RFI&apos;,&apos;RFI&apos;,
&apos;3 - Prequal&apos;,&apos;Prekval&apos;,
&apos;4 - Offer&apos;, &apos;Tilbud&apos;,
&apos;5 - Awarded&apos;, &apos;Tildelt - venter på kontrakt&apos;,
&apos;Closed Won&apos;, &apos;Vunnet&apos;,
&apos;Closed Lost&apos;, &apos;Tapt&apos;,
&apos;Abandoned by Us&apos;, &apos;Forlatt av oss&apos;,
&apos;Abandoned by Customer&apos;, &apos;Forlatt av kunde&apos;,
&apos;&apos;)

+
IF(OR(
TEXT(Opportunity__r.StageName) = &apos;2 - RFI&apos;,
TEXT(Opportunity__r.StageName) = &apos;3 - Prequal&apos;,
TEXT(Opportunity__r.StageName) = &apos;4 - Offer&apos;
),
CASE(TEXT(Opportunity__r.Status__c),
&apos;In progress&apos;,&apos; - I arbeid&apos;,
&apos;Sent&apos;,&apos; - Sendt&apos;,
&apos;&apos;),
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>