force-app/objects/Bid__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Status__c</columns>
    <columns>StageID__c</columns>
    <columns>Type__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>Manual_flow__c</columns>
    <columns>BID_Portal_URL__c</columns>
    <columns>BID_Number__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>